# khonsu-tools

./: Cargo.toml
khonsu-tools/: Cargo.toml
khonsu-tools/src/: lib.rs  publish.rs
khonsu-universal-tools/: Cargo.toml
khonsu-universal-tools/src/: audit.rs  code_coverage.rs  lib.rs  pre_commit.rs
src/: audit.rs  code_coverage.rs  lib.rs
