[package]
name = "khonsu-tools"
version = "0.0.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khonsu-universal-tools = { path = "../khonsu-universal-tools" }
devx-cmd = "0.5"
devx-pre-commit = "0.5"
clap = { version = "4.0.32", features = ["derive"] }
badge = "0.3"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

rustme = { git = "https://github.com/khonsulabs/rustme.git", branch = "main" }
